test/samples/valid/simple.maruir
struct Foo {
    a: uint256;
    b: int8;
    c: bool;
}

struct Boo {
    a: bool;
}

struct Moo<M>  {
    c: int16;
}

struct Goo<N>  {
    e: bool;
}

fun foo() { }

fun bar(a: bool) {}

fun boo(a: bool, b: uint256)

fun hoo(c: bool)

fun doo<M> (e: int32) {}

fun goo(): uint16

fun zoo<M, S>(e: int32): bool