test/samples/invalid/resolving/param_local_shadow.maruir
struct M {
    b: bool;

}

fun foo(a: uint8)
locals a: int8;
{

}